# bismuth

./: Cargo.toml  README.md  appveyor.yml  rustfmt.toml
src/: clamp.rs  cube.rs  edit.rs  error.rs  event.rs  framework.rs  input.rs  lib.rs  main.rs  math.rs  render.rs  resource.rs
src/cube/: clamp.rs  edit.rs  error.rs  geometry.rs  mesh.rs  mod.rs  parallel.rs  space.rs  split.rs  traverse.rs  tree.rs
src/framework/: activity.rs  application.rs  context.rs  error.rs  harness.rs  mod.rs
src/input/: keyboard.rs  mod.rs  mouse.rs  state.rs
src/mesh/: cube.rs  decompose.rs  generate.rs  index.rs  mod.rs  primitive.rs  sphere.rs  tessellate.rs
src/render/: camera.rs  context.rs  error.rs  mesh.rs  mod.rs  pipeline.rs  renderer.rs  texture.rs
src/shader/: cube.f.glsl  cube.glslf  cube.glslv  cube.v.glsl
