[package]
name = "bismuth"
version = "0.0.1"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/olson-sean-k/bismuth"
description = "A 3D game world represented as cubes in an oct-tree that can be manipulated in real time."

[badges]
travis-ci = { repository = "olson-sean-k/bismuth" }
appveyor = { repository = "olson-sean-k/bismuth" }

[lib]
name = "bismuth"

[[bin]]
name = "bismuth"
doc = false

[dependencies]
alga = "0.5.*"
gfx = "0.14.*"
gfx_device_gl = "0.13.*"
gfx_window_glutin = "0.14.*"
glutin = "0.7.*"
image = "0.12.*"
lazy_static = "0.1.*"
nalgebra = "0.11.*"
num = "0.1.*"
rand = "0.3.*"
time = "0.1.*"
winit = "0.5.*"
