[package]
name = "bismuth"
version = "0.0.4"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/olson-sean-k/bismuth"
description = "A 3D game world represented as cubes in an oct-tree that can be manipulated in real time."

[badges]
travis-ci = { repository = "olson-sean-k/bismuth" }
appveyor = { repository = "olson-sean-k/bismuth" }

[lib]
name = "bismuth"

[[bin]]
name = "bismuth"
doc = false

[dependencies]
alga = "0.5.*"
arrayvec = "0.3.*"
decorum = "0.0.8"
failure = "0.1.*"
gfx = "0.14.*"
gfx_device_gl = "0.13.*"
gfx_window_glutin = "0.14.*"
glutin = "0.7.*"
image = "0.13.*"
lazy_static = "0.1.*"
nalgebra = "0.13.*"
num = "0.1.*"
plexus = "0.0.9"
rand = "0.3.*"
winit = "0.5.*"
